Changes in content

--- a/anandms/policy.html
+++ b/anandms/policy.html
@@ -68,7 +68,7 @@
   </ul>
 
   <h2>6. Children’s Privacy</h2>
-  <p>Our app is not intended for children under the age of 13. We do not knowingly collect data from children.</p>
+  <p>Our app is intended for children under the age of 13. We do not knowingly collect data from children. And this App make sure Privacy according to childrens too.</p>
 
   <h2>7. Changes to This Privacy Policy</h2>
   <p>We may update this policy from time to time. Changes will be effective when posted on this page.</p>
