--- a/anandms/policy.html
+++ b/anandms/policy.html
@@ -26,6 +26,7 @@
 <body>
   <h1>Privacy Policy</h1>
   <p><strong>Effective Date:</strong> 01/12/2024</p>
+  <p><strong>Document updated</strong> on 06/05/2025</p>
   <p><strong>AnandJMS</strong> ("we," "our," or "us") operates <strong>AnandJMS</strong>, available on the Google Play Store. This Privacy Policy explains how we collect, use, and protect your information when you use our app.</p>
 
   <h2>1. Information We Collect</h2>
