--- a/anandms/policy.html
+++ b/anandms/policy.html
@@ -26,7 +26,7 @@
 <body>
   <h1>Privacy Policy</h1>
   <p><strong>Effective Date:</strong> 01/12/2024</p>
-  <p><strong>Document updated</strong> on 06/05/2025</p>
+  <p><strong>Document updated</strong> on 03/07/2025</p>
   <p><strong>AnandJMS</strong> ("we," "our," or "us") operates <strong>AnandJMS</strong>, available on the Google Play Store. This Privacy Policy explains how we collect, use, and protect your information when you use our app.</p>
 
   <h2>1. Information We Collect</h2>
@@ -37,7 +37,15 @@
     <li>Name, email address, and other details you provide when creating an account or contacting us.</li>
   </ul>
 
-  <h3>b. Non-Personal Information</h3>
+  <h3>b. Phone Number</h3>
+  <ul>
+    <li>We collect your phone number solely for the purpose of user authentication and account security. Your phone number is used to:</li>
+    <li>- Communicate important service-related updates</li>
+    <li>We do not share your phone number with third parties, and it is not visible to other users of the app. Your phone number is securely stored using Firebase Authentication and complies with all applicable privacy and data protection laws.</li>
+    <li>You may request the deletion of your account and associated phone number at any time from within the app.</li>
+  </ul>  
+
+  <h3>c. Non-Personal Information</h3>
   <ul>
     <li>Usage data, device information, and analytics for improving app performance.</li>
   </ul>
