--- a/anandms/policy.html
+++ b/anandms/policy.html
@@ -40,7 +40,7 @@
   <h3>b. Phone Number</h3>
   <ul>
     <li>We collect your phone number solely for the purpose of user authentication and account security. Your phone number is used to:</li>
-    <li>- Communicate important service-related updates</li>
+    <li>Communicate important service-related updates</li>
     <li>We do not share your phone number with third parties, and it is not visible to other users of the app. Your phone number is securely stored using Firebase Authentication and complies with all applicable privacy and data protection laws.</li>
     <li>You may request the deletion of your account and associated phone number at any time from within the app.</li>
   </ul>  
