--- a/anandms/support.html
+++ b/anandms/support.html
@@ -132,7 +132,7 @@
     <h2>Download the App</h2>
     <p>Available for Android and iOS. Click below to download:</p>
     <a href="https://play.google.com/store/apps/details?id=com.mohit.anandjms" class="download-btn">Download for Android</a>
-    <a href="#" class="download-btn">Download for iOS</a>
+    <a href="https://apps.apple.com/us/app/anand-ms/id6747710265" class="download-btn">Download for iOS</a>
   </section>
 
   <section id="contact" class="section">
