--- a/anandms/support.html
+++ b/anandms/support.html
@@ -137,7 +137,9 @@
 
   <section id="contact" class="section">
     <h2>Contact Us</h2>
-    <p>Email: mohitpay22@gmail.com</p>
+    <p>
+      <a href="mailto:mohitpay22@gmail.com">Email: mohitpay22@gmail.com</a>
+    </p>
     <p>Phone: +91-6353668707</p>
   </section>
 
