--- a/anandms/support.html
+++ b/anandms/support.html
@@ -140,7 +140,9 @@
     <p>
       <a href="mailto:mohitpay22@gmail.com">Email: mohitpay22@gmail.com</a>
     </p>
-    <p>Phone: +91-6353668707</p>
+    <p>
+      <a href="tel:+916353668707">Phone: +91-6353668707</a>
+      </p>
   </section>
 
 </div>
